...
    <string name="support_email_address_default">commcarehq-support@dimagi.com</string>
    <string name="manager_activity_name">App Manager</string>
    <string name="install_app">Install an App</string>
    <string name="uninstall_app">Uninstall</string>
    <string name="archive_app">Archive</string>
    <string name="unarchive_app">Unarchive</string>
    <string name="update_app">Update</string>
    <string name="update_canceled">Your update was paused</string>
    <string name="verify_resources">Validate Multimedia</string>
    <string name="skip_button_text">Skip For Now</string>
    <string name="retry_button_text">Retry</string>
    <string name="skipped_verification_warning">You did not validate multimedia resources for the app that was just
         installed! This app will not be visible to users on the log-in screen until multimedia is validated.</string>
...
    <string name="start_recording" cc:translatable="true">Start recording</string>
    <string name="start_recording_instructions" cc:translatable="true">Tap the microphone to begin. Recording saves automatically when you stop.</string>

    <string name="capture_audio" cc:translatable="true">Record Sound</string>
    <string name="capture_image" cc:translatable="true">Take Picture</string>
    <string name="capture_video" cc:translatable="true">Record Video</string>
    <string name="change_language" cc:translatable="true">Change Language</string>
    <string name="clearanswer_confirm" cc:translatable="true">Remove the response to \"%s\"?</string>
    <string name="clear_answer" cc:translatable="true">Remove response</string>
    <string name="clear_answer_ask" cc:translatable="true">Remove This Response?</string>
    <string name="clear_answer_no" cc:translatable="true">CANCEL</string>
    <string name="discard_answer" cc:translatable="true">REMOVE RESPONSE</string>
    <string name="discard_image" cc:translatable="true">Remove Image</string>
    <string name="do_not_exit" cc:translatable="true">STAY IN FORM</string>
    <string name="do_not_save" cc:translatable="true">EXIT WITHOUT SAVING</string>
    <string name="error_occured" cc:translatable="true">Error Occurred</string>
    <string name="file_invalid" cc:translatable="true">File: %s is invalid.</string>
    <string name="file_missing" cc:translatable="true">File: %s is missing.</string>
    <string name="get_location" cc:translatable="true">Record Location</string>
    <string name="invalid_answer_error" cc:translatable="true">Sorry, this response is invalid!</string>
    <string name="jump_to_beginning" cc:translatable="true">Go To Start</string>
...
    <string name="jump_to_previous" cc:translatable="true">Go Up</string>
    <string name="latitude" cc:translatable="true">Latitude</string>
    <string name="loading_form" cc:translatable="true">Loading Form</string>
    <string name="location_provider_accuracy" cc:translatable="true">Location accuracy: %1$s m.</string>
    <string name="longitude" cc:translatable="true">Longitude</string>
    <string name="no_items_display" cc:translatable="true">Nothing available to display.</string>
    <string name="ok" cc:translatable="true">OK</string>
    <string name="parse_error" cc:translatable="true">Sorry, unable to parse form.</string>
    <string name="play_audio" cc:translatable="true">Play Sound</string>
    <string name="play_video" cc:translatable="true">Play Video</string>
    <string name="please_wait" cc:translatable="true">Please wait a few moments.</string>
    <string name="please_wait_long" cc:translatable="true">Please wait. This could take a few minutes.</string>
    <string name="quit_application" cc:translatable="true">Exit %s</string>
    <string name="quit_form_title" cc:translatable="true">Exit Form?</string>
    <string name="replace_location" cc:translatable="true">Replace Location</string>
    <string name="required_answer_error" cc:translatable="true">Sorry, this response is required!</string>
    <string name="review" cc:translatable="true">Continue</string>
    <string name="save_all_answers" cc:translatable="true">Save Form</string>
    <string name="saving_form" cc:translatable="true">Saving Form</string>
    <string name="trigger" cc:translatable="true">OK. Please continue.</string>
    <string name="view_hierarchy" cc:translatable="true">Go To Prompt</string>
    <string name="form_entry_settings" cc:translatable="true">Change Settings</string>
    <string name="show_location" cc:translatable="true">Show Location</string>
    <string name="keep_changes" cc:translatable="true">SAVE INCOMPLETE</string>
    <string name="go_to_location" cc:translatable="true">Go to Location</string>
    <string name="font_size" cc:translatable="true">Text Font Size</string>
    <string name="change_font_size" cc:translatable="true">Text Font Size</string>
    <string name="success" cc:translatable="true">Success</string>
    <string name="choose_sound" cc:translatable="true">Choose Sound</string>
    <string name="choose_video" cc:translatable="true">Choose Video</string>
    <string name="choose_image" cc:translatable="true">Choose Image</string>
    <string name="choose_document" cc:translatable="true">Choose Document</string>
...
    <string name="install_error_file_not_found" cc:translatable="true">No file found for resource %1$s</string>
    <string name="update_blocked_on_sync_message" cc:translatable="true">Sync is required to install this update. Auto initiating sync...</string>
    <string name="media_download_failed" cc:translatable="true">An error occurred while downloading the requested media. Please try again</string>
    <string name="media_download_in_progress" cc:translatable="true">Download in Progress, Please wait...</string>
    <string name="media_download_started" cc:translatable="true">Download started</string>
    <string name="media_download_completed" cc:translatable="true">Download completed</string>
    <string name="video_download_prompt" cc:translatable="true">Video file is missing for this question, click the download button above to download</string>
    <string name="image_download_prompt" cc:translatable="true">Image file is missing for this question, Click the download button above to download</string>
    <string name="audio_download_prompt" cc:translatable="true">Audio file is missing for this question, click the download button above to download</string>
    <string name="media_not_found_error" cc:translatable="true">Media not found in the application</string>

    <string name="wait_for_location_fix" cc:translatable="true">CommCare is still trying to get your location. Please wait or click Cancel to abort.</string>
    <string name="invalid_case_property_length" cc:translatable="true">Invalid %1s, value must be 255 characters or less</string>
    <string name="invalid_case_graph_error" cc:translatable="true">This form introduces an invalid case relationship</string>
    <string name="root_detected_title" cc:translatable="true">Rooted Device Detected</string>
    <string name="root_detected_message" cc:translatable="true">You are not allowed to run CommCare on a rooted device. Please use a non rooted device</string>
...
