<!-- Copyright (C) 2009 University of Washington

Licensed under the Apache License, Version 2.0 (the "License"); you may not
use this file except in compliance with the License. You may obtain a copy of
the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
License for the specific language governing permissions and limitations under
the License.
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:viewBindingIgnore="true">

    <TextView
        android:id="@+id/pathtext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"/>
    <!-- would prefer not to use an extra LinearLayout here, but weights don't
        seem to work properly in RelativeLayout -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/cc_core_bg"
        android:gravity="end"
        android:weightSum="4"
        android:id="@+id/buttonholder">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/jumpPreviousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_previous"
            android:padding="12dp"
            android:textColor="@color/cc_brand_color"
            android:background="@color/cc_core_bg"
            style="@style/CommCare.Button.Default"
            android:textSize="@dimen/text_medium"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/jumpBeginningButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_beginning"
            android:padding="12dp"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/cc_brand_color"
            android:background="@color/cc_core_bg"
            style="@style/CommCare.Button.Default"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/jumpEndButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jump_to_end"
            android:padding="12dp"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/cc_brand_color"
            android:background="@color/cc_core_bg"
            style="@style/CommCare.Button.Default"
            android:layout_weight="1"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:listSelector="@drawable/selector"
        android:divider="@drawable/divider_hierarchy_layout"
        android:layout_below="@id/buttonholder"/>

    <TextView
        android:id="@+id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/no_items_display"
        android:textSize="@dimen/text_large"
        android:padding="20dp"
        android:gravity="center"
        android:background="@color/white"/>
</RelativeLayout>