...
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/content_start"
            android:layout_marginLeft="@dimen/content_start"
            android:layout_marginRight="@dimen/content_start"
            android:layout_marginStart="@dimen/content_start"
            android:layout_toEndOf="@id/nav_btn_prev"
            android:layout_toLeftOf="@+id/nav_btn_next"
            android:layout_toRightOf="@id/nav_btn_prev"
            android:layout_toStartOf="@+id/nav_btn_next"
            android:layout_width="wrap_content"
            android:max="100"
            android:paddingBottom="@dimen/progressbar_vertical_padding"
            android:paddingTop="@dimen/progressbar_vertical_padding"
...
            app:srcCompat="@drawable/ic_chevron_right"
            android:paddingEnd="@dimen/content_start"
            android:paddingStart="@dimen/new_progressbar_button_padding"
            android:layout_alignParentEnd="true" />

        <org.commcare.views.ClippingFrame
            android:id="@+id/nav_btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/nav_btn_prev"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/nav_btn_prev"
...
