...

    <include
        android:id="@+id/choice_dialog_title"
        layout="@layout/dialog_title"/>

    <ListView
        android:id="@+id/choices_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/standard_spacer_large"
        android:layout_marginRight="@dimen/standard_spacer_large"
        android:layout_marginBottom="@dimen/standard_spacer_double"
...
