<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true">

    <RelativeLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <FrameLayout
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@id/audio_video_button"
            android:layout_toLeftOf="@id/audio_video_button"
            android:gravity="start"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/audio_video_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/tts_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tts"
                android:visibility="gone" />

            <org.commcare.views.media.AudioPlaybackButton
                android:id="@+id/audio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/video_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_media_play"
                android:visibility="gone" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/media_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_container">

        <org.commcare.views.media.CommCareVideoView
            android:id="@+id/inline_video_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/qr_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="@dimen/standard_spacer"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_spacer"
            android:scaleType="center"
            android:visibility="gone" />

        <org.commcare.views.ResizingImageView
            android:id="@+id/resizing_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="@dimen/standard_spacer"
            android:visibility="gone" />

        <include
            android:id="@+id/missing_media_view"
            layout="@layout/missing_media_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:drawable/divider_horizontal_bright"
        android:visibility="gone" />

</merge>
